Changing picture size

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -518,6 +518,10 @@ footer .owner p a {
   @include box-sizing(border-box);
 }
 
+.main_image {
+	width: 100%;
+}
+
 .highlight  { background: #ffffff; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
