--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -530,7 +530,7 @@ footer .owner p a {
 .download-description {
 	text-align: right;
 	color: #63a52a;
-	position: absolute;
+	position: relative;
 	top: 6px;
 	width: 407px;
 }
